--- a/src/styles/mostRequested.css
+++ b/src/styles/mostRequested.css
@@ -12,18 +12,21 @@
 .buttonMostReq {
   cursor: pointer;
   text-align: center;
-  width: 130px;
-  height: 45px;
+  width: 150px;
+  height: 40px;
   font-size: 16px;
   font-weight: 300;
   border: none;
   box-shadow: none;
   text-decoration: none;
   background-color: #ff0000;
-  border-radius: 20px;
+  border-radius: 10px;
   color: #ffffff;
   margin-top: 10px;
   margin-bottom: 30px;
+}
+.buttonMostReq:hover {
+  background-color: #ff1d1d;
 }
 .containerHeart {
   width: 100%;
