actualizacion de la pagina web 0.6

--- a/src/styles/locationRestaurant.css
+++ b/src/styles/locationRestaurant.css
@@ -1,7 +1,7 @@
 .containerLocationRestaurant {
   width: 100%;
-  background-color: red;
   height: 500px;
+  margin-top: 300px;
 }
 .containerLocationRestaurant iframe {
   width: 100%;
