--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -5,6 +5,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  z-index: 5;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
 }
 img {
   width: 180px;
