actualizacion de la pagina web 0.9/hice la estructuracion de los archivos por componentes

--- a/src/components/choiseYourExperience/choiseYourExperience.css
+++ b/src/components/choiseYourExperience/choiseYourExperience.css
@@ -52,7 +52,7 @@
 .containerTextChoiseExp {
   margin-top: 100px;
   width: 90%;
-  background-image: url(../assets/backgroundChoiseExperience.jpg);
+  background-image: url(../../assets/backgroundChoiseExperience.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
