--- a/src/components/ourHistory/ourHistory.css
+++ b/src/components/ourHistory/ourHistory.css
@@ -14,14 +14,15 @@
   width: 100%;
   height: 100%;
 }
+
 .secondSectionOurHistory {
   display: flex;
-  flex-direction: column;
-  justify-content: star;
-  align-items: start;
-  flex: 0 0 50%;
-  padding-top: 150px;
-  padding-left: 50px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  height: 100%;
+  text-align: start;
 }
 .infoSecondSectionOurHistory {
   display: flex;
@@ -29,20 +30,38 @@
   justify-content: center;
   align-items: center;
   gap: 40px;
+  width: 100%;
+  height: 100%;
 }
 
 .titleSectionAboutUs {
-  font-size: 42px;
-  width: 150px;
-  font-weight: 500;
+  font-size: 55px;
+  font-weight: 400;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
 .spanTitleSectionAboutUs {
-  font-weight: 700;
+  font-weight: 800;
   color: #faa307;
+  text-align: center;
 }
 .textSectionAboutUs {
   color: black;
   font-size: 18px;
   font-weight: 200;
   width: 600px;
+}
+.titleSectionAboutUs {
+  width: 100%;
+}
+/*custom class component*/
+.firstSectionOurHistory .customImageClass1 {
+  width: 70%;
+  height: 80%;
+  margin-top: 50px;
 }
